@@ -1,0 +1,5 @@
+spec/patches
+------------
+
+Add a file like ``lib/foo/bar.rb`` to replace (patch) original file (from a
+package ``foo`` for example) when running ``bundle exec rake beaker``.
